# aidhp-thugs-of-ai

./: README.md
Demos/: Video_links.txt
artifacts/arch/: README.md
artifacts/demo/: Hackathon2025-Thugs_of_AI.pptx  README.md
code/src/: Finadvice.py  HackathonEDA.ipynb  Modelling.ipynb  SentimentGenerationForSyntheticData.ipynb  app.py  card_generator.py  crew_working.py  finadvice_hc.py  finadvice_speech.py  finadvice_ui.py  sentiment_script.py
code/src/config/: agents.yaml  tasks.yaml
code/src/data/: customer_advice.csv  generated_sentiments.csv
htn25/: README.md  pyproject.toml  report.md
htn25/hyperpersonalization/: README.md  pyproject.toml
htn25/hyperpersonalization/newsynthetic/: Credit_Debit_Cards.csv  Updated_Organization_Profile.csv  Updated_Sentiment_Data.csv
htn25/hyperpersonalization/src/hyperpersonalization/: crew.py  main.py
htn25/newsynthetic/: 1-sentiments_df_final_longform.csv  Financial_Products_Master.csv  Updated_Customer_Profile.csv  Updated_Transaction_Data.csv
htn25/src/: crew.py  crew_old.py  main.py  main_old.py
htn25/src/config/: agents.yaml  tasks.yaml
synthetic/: AI_Hyper-Personalization_Document.docx
