[project]
name = "hyperpersonalization"
version = "0.1.0"
description = "hyperpersonalization using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
hyperpersonalization = "hyperpersonalization.main:run"
run_crew = "hyperpersonalization.main:run"
train = "hyperpersonalization.main:train"
replay = "hyperpersonalization.main:replay"
test = "hyperpersonalization.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
